<resources>
    <string name="app_name">MAD Assignment 2</string>
    <string name="resetGameDialogTitle">Reset Game</string>
    <string name="resetGameDialogMessage">WARNING: Doing this will permanently wipe all of your progress. Are you sure you want to do this?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="moritzBergemann">Moritz Bergemann</string>
    <string name="play">Play</string>
    <string name="title">City Builder</string>
    <string name="cityNameLabel">City Name:</string>
    <string name="initialMoneyLabel">Initial Money:</string>
    <string name="settings">Settings</string>
    <string name="mapWidthLabel">Map Width:</string>
    <string name="mapHeightLabel">Map Height:</string>
    <string name="moneySign">$</string>
    <string name="resetGame">Reset Game</string>
    <string name="latestIncomeLabel">Latest Income:</string>
    <string name="employmentRateLabel">Employment Rate:</string>
    <string name="temperatureLabel">Current Temperature:</string>
    <string name="moneyLabel">Money:</string>
    <string name="rowLabel">Row:</string>
    <string name="columnLabel">Column:</string>
    <string name="chooseImage">Choose Image</string>
    <string name="cityNamePreface">City Of</string>
    <string name="timeStep">Time+</string>
    <string name="populationLabel">Population:</string>
    <string name="cityInfo">City Info</string>
    <string name="plusMoneySign">+$</string>
    <string name="gameOver">GAME OVER</string>
    <string name="turnLabel">Turn:</string>
    <string name="demolish">Demolish</string>
    <string name="details">Details</string>
    <string name="costLabel">Cost:</string>
    <string name="residential">Residential</string>
    <string name="commercial">Commercial</string>
    <string name="road">Road</string>
    <string name="continueGameDialogTitle">Continue Game</string>
    <string name="residentialCostLabel">Residential Cost:</string>
    <string name="commercialCostLabel">Commerical Cost:</string>
    <string name="roadCostLabel">Road Cost:</string>
    <string name="salaryLabel">Salary:</string>
    <string name="taxRateLabel">Tax Rate:</string>
    <string name="serviceCostLabel">Service Cost:</string>
    <string name="shopSizeLabel">Shop Size:</string>
    <string name="familySizeLabel">Family Size:</string>
    <string name="employmentRateLabelShort">Employment:</string>
    <string name="temperatureLabelShort">Temp:</string>
</resources>