<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HeaderBarFragment">

    <TextView
        android:id="@+id/cityNamePreface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cityNamePreface"
        app:layout_constraintBottom_toTopOf="@+id/cityName"
        app:layout_constraintEnd_toEndOf="@+id/cityName"
        app:layout_constraintStart_toStartOf="@+id/cityName" />

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/timeStepButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/moneyValue"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="CITY NAME HERE" />

    <Button
        android:id="@+id/timeStepButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeStep"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cityName"
        app:layout_constraintTop_toBottomOf="@+id/timeValue" />

    <TextView
        android:id="@+id/populationValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/populationLabel"
        app:layout_constraintEnd_toStartOf="@+id/timeStepButton"
        app:layout_constraintStart_toEndOf="@+id/populationLabel"
        app:layout_constraintTop_toTopOf="@+id/populationLabel"
        tools:text="POP HERE" />

    <TextView
        android:id="@+id/populationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/populationLabel"
        app:layout_constraintEnd_toEndOf="@+id/cityName"
        app:layout_constraintStart_toStartOf="@+id/cityName"
        app:layout_constraintTop_toBottomOf="@+id/cityName" />

    <TextView
        android:id="@+id/moneyValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/employmentRateLabel"
        app:layout_constraintEnd_toStartOf="@+id/cityName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/moneyPreface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="MONEY" />

    <TextView
        android:id="@+id/moneyPreface"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:text="@string/moneySign"
        app:layout_constraintBottom_toBottomOf="@+id/moneyValue"
        app:layout_constraintEnd_toStartOf="@+id/moneyValue"
        app:layout_constraintTop_toTopOf="@+id/moneyValue" />

    <TextView
        android:id="@+id/moneyPerTurnValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/moneyValue"
        app:layout_constraintTop_toBottomOf="@+id/moneyValue"
        tools:text="MONEY PER TURN" />

    <TextView
        android:id="@+id/moneyPerTurnPreface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plusMoneySign"
        app:layout_constraintBottom_toBottomOf="@+id/moneyPerTurnValue"
        app:layout_constraintEnd_toStartOf="@+id/moneyPerTurnValue"
        app:layout_constraintTop_toTopOf="@+id/moneyPerTurnValue" />

    <TextView
        android:id="@+id/gameLostMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gameOver"
        android:textColor="#F44336"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/populationLabel" />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turnLabel"
        app:layout_constraintBottom_toTopOf="@+id/timeStepButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cityName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/timeLabel"
        app:layout_constraintTop_toBottomOf="@+id/timeLabel"
        tools:text="TIME" />

    <TextView
        android:id="@+id/employmentRateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employmentRateLabelShort"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cityName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moneyPerTurnValue" />

    <TextView
        android:id="@+id/employmentRateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/employmentRateLabel"
        app:layout_constraintStart_toEndOf="@+id/employmentRateLabel"
        app:layout_constraintTop_toTopOf="@+id/employmentRateLabel"
        tools:text="EMP" />

    <TextView
        android:id="@+id/temperatureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperatureLabelShort"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/employmentRateLabel"
        app:layout_constraintTop_toBottomOf="@+id/employmentRateLabel" />

    <TextView
        android:id="@+id/temperatureValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/temperatureLabel"
        app:layout_constraintEnd_toEndOf="@+id/employmentRateValue"
        app:layout_constraintStart_toEndOf="@+id/temperatureLabel"
        app:layout_constraintTop_toTopOf="@+id/temperatureLabel"
        tools:text="TEMP" />
</androidx.constraintlayout.widget.ConstraintLayout>